<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@drawable/login_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/linearLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/icons"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:textSize="50sp"
            />
        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp"
            />

        <EditText
            android:id="@+id/emailText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:textColorHint="@color/icons"
            android:textColor="@color/icons"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:backgroundTint="@color/icons"/>

        <EditText
            android:id="@+id/usernameText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:textColorHint="@color/icons"
            android:textColor="@color/icons"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:backgroundTint="@color/icons"/>

        <EditText
            android:id="@+id/passwordText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textColor="@color/icons"
            android:textColorHint="@color/icons"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:inputType="textPassword"
            android:backgroundTint="@color/icons"/>

        <EditText
            android:id="@+id/password2Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password2"
            android:textColor="@color/icons"
            android:textColorHint="@color/icons"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:inputType="textPassword"
            android:backgroundTint="@color/icons"/>

        <Button
            android:id="@+id/buttonDaftar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:background="@color/primary"
            android:layout_marginTop="15dp"
            android:text="@string/daftar"
            android:textColor="@color/icons"
            android:textSize="20sp"
            />


    </LinearLayout>




</RelativeLayout>
