<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">



                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_info_outline_black"
                    android:drawablePadding="15dp"
                    android:paddingTop="20dp"
                    android:text="@string/status"
                    android:textSize="12sp" />

                <com.prolificinteractive.materialcalendarview.MaterialCalendarView xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/calendarView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    app:mcv_selectionColor="#00F"
                    app:mcv_showOtherDates="all"

                    />



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2">

                        <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/hai"
                            android:textColor="@color/primary_text"
                            android:textSize="14sp"
                            android:textAlignment="center"/>
                        <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:paddingBottom="20dp"
                            android:text="@string/deposit"
                            android:textColor="@color/primary_text"
                            android:textSize="20sp"
                            android:textAlignment="center"
                            android:gravity="center"

                            />

                </LinearLayout>
        </LinearLayout>



</RelativeLayout>
